# pickysettings

./: .gitignore  README.md  pyproject.toml
pickysettings/: __init__.py
pickysettings/core/: setting.py  settings.py  utils.py
pickysettings/core/exceptions/: __init__.py  base.py  compose.py  configuration.py  fields.py  initialization.py  load.py  setting.py
pickysettings/core/fields/: __init__.py  base.py  dict.py  series.py  set.py  utils.py  value.py
pickysettings/lib/: extensions.py  scrape.py  utils.py
tests/: conftest.py  mgmt.py  test_exceptions.py  test_fields.py  test_pickysettings.py  test_setting.py  test_settings.py  test_utils.py  utils.py
tests/helpers/: __init__.py  decorators.py  file_content.py  module.py
tests/setting/: conftest.py  test_abs_path.py  test_load.py  test_module_path.py  test_path.py  test_paths.py  test_setting.py
tests/settings/: base.py  test_load.py  test_multiple_specifications.py  test_settings.py  test_specifications.py
tests/tmp_modules/app/settings/: dev.py  dev2.py  dev3.py  test_file1.py  test_file2.py
