[tool.poetry]
name = "pickysettings"
version = "0.1.0"
description = ""
authors = ["Nicholas Florin <nflorin@theatlantic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "=3.0"
ipdb = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
termx = {path = "../termx"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
